# dtc_de-zoomcamp_2024_homework

./: README.md  pyproject.toml
workshops/dlt/: dlt_ipykernel_launcher.duckdb  homework_starter.ipynb
